Wed Dec  9 18:53:40 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/datamodel.txt:
        * performance-tests/Bench/src/EntityProfiles.h:
        * performance-tests/Bench/src/Gaussian.cpp:
        * performance-tests/Bench/src/Options.cpp:
        * performance-tests/Bench/src/Publication.cpp:

          Added new FixedRate publication parameter to allow
          specification of fixed sending rates.

Wed Dec  9 17:22:09 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Clarified member names.

Wed Dec  9 16:49:06 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Applied minor optimization to send_naks.

Wed Dec  9 16:34:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/RandomGenerator.cpp:

          Fixed VC++ warnings related to time_t signage.

Wed Dec  9 05:14:23 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/OpenDDS/DCPS/transport/MulticastConfiguration.java:
        * java/dds/OpenDDS_DCPS_jni.cpp:

          Added support for syn_backoff transport configuration option.

Wed Dec  9 01:47:12 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/monitor/monitor.idl:

          Change handle member of the DW and DR report to be
          pub_handle and sub_handle, respectively.  Add topics
          sequence to DP report.

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/monitor/DPMonitorImpl.h:
        * dds/monitor/DPMonitorImpl.cpp:
        * dds/monitor/DRMonitorImpl.cpp:
        * dds/monitor/DWMonitorImpl.cpp:
        * dds/monitor/SPMonitorImpl.h: